@@ -5,6 +5,7 @@
 - Link libxfsm against all required libs to avoid link-time errors
   (bug 4429).
 - Make splash engines store their settings in Xfconf.
+- Handle the ProcessID SM property properly.
 
 
 4.5.91
