@@ -1,5 +1,10 @@
 2008-10-22	Brian Tarricone <bjt23@cornell.edu>
 
+	* xfce4-session/xfsm-client.c: Handle the SmProcessID property
+	  correctly.
+
+2008-10-22	Brian Tarricone <bjt23@cornell.edu>
+
 	* settings/session-editor.c: Fix a couple memleaks and a typo
 	  that causes operations on clients to fail.
 
